welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:9: error: not found: value valeur
			valeur = valeur + 1;
                        ^