welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	var hauteur: Int = getMondeHauteur();
	var largeur: Int = getMondeLargeur();
	baisseBrosse();
	for(n1 <- 0 to largeur - 1){
		for(n2 <- 0 to hauteur - 1){
			setPos(n2, n1);
			valeur = valeur + 1;
		}
	}
	
}